<resources>
    <string name="app_name">MunroLibraryChallenge</string>

    <string name="d_filter">Filter</string>
    <string name="d_back">Back</string>
    <string name="d_done">Done</string>
    <string name="d_save">Save</string>

    <string name="d_list_empty">No Data available.\nPlease try refining your filter options.</string>

    <string name="t_filter_options">Filtering Options</string>

    <string name="d_munro">Munro</string>
    <string name="d_munrotop">Munro Top</string>

    <string name="d_label_name">Name:</string>
    <string name="d_label_height">Height (m):</string>
    <string name="d_label_hillcategory">Hill Category:</string>
    <string name="d_label_gridreference">Grid Reference:</string>

    <string name="d_filter_description">Please try filtering the data you desire with the options below.</string>
    <string name="d_filter_hillcategory">Select a Hill Category:</string>
    <string name="d_hint_hillcategory">Hill Category</string>
    <string name="d_sort_height">Sort by Height in meters:</string>
    <string name="d_hint_height">Height (m) sort</string>
    <string name="d_sort_alphabetic">Sort Alphabetically:</string>
    <string name="d_hint_alphabetic">Alphabetic sort</string>
    <string name="d_filter_sortmax">Maximum number of records:</string>
    <string name="d_hint_sortmax">Max records</string>
    <string name="d_filter_maxheight">Filter by Maximum Height in meters:</string>
    <string name="d_hint_maxheight">Below 1344</string>
    <string name="d_filter_minheight">Filter by Minimum Height in meters:</string>
    <string name="d_hint_minheight">Above 915</string>

    <string name="d_demo_name">Ben Chonzie</string>
    <string name="d_demo_height">974</string>
    <string name="d_demo_hillcategory">Munro</string>
    <string name="d_demo_gridreference">ZF094212</string>
</resources>